--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@vue/eslint-config-airbnb-with-typescript": "^8.0.0",
+    "@vueuse/components": "^12.2.0",
+    "@vueuse/core": "^12.2.0",
     "D": "^1.0.0",
     "pinia": "^2.1.7",
     "vite-plugin-vuetify": "^2.0.4",
